--- a/codingce-gulimall/gulimall-order/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-order/src/main/resources/application.yaml
@@ -7,6 +7,14 @@ spring:
     password: 123456
     url: jdbc:mysql://localhost:3306/gulimall_oms
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-order
+
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
