--- a/codingce-gulimall/gulimall-coupon/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-coupon/src/main/resources/application.yaml
@@ -9,8 +9,19 @@ spring:
     password: 123456
     url: jdbc:mysql://localhost:3306/gulimall_sms
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
+  application:
+    name: gulimall-coupon
+
+
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+
