--- a/codingce-gulimall/gulimall-ware/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-ware/src/main/resources/application.yaml
@@ -9,6 +9,13 @@ spring:
     password: 123456
     url: jdbc:mysql://localhost:3306/gulimall_wms
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-ware
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
