A 测试 openfeign 远程调用

--- a/codingce-gulimall/gulimall-common/pom.xml
+++ b/codingce-gulimall/gulimall-common/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <!-- 1 导入依赖 每个服务都需要 nacos 服务配置 连接 nacos 配置中心 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
 
     </dependencies>
 
