--- a/codingce-gulimall/gulimall-coupon/src/main/resources/bootstrap.properties
+++ b/codingce-gulimall/gulimall-coupon/src/main/resources/bootstrap.properties
@@ -1,3 +1,24 @@
 spring.application.name=gulimall-coupon
 # 指定 nacos 配置中心地址
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+
+# 配置中心环境切换
+spring.cloud.nacos.config.namespace=a3f67391-56ca-43f5-8139-4d30bd5170f9
+#spring.cloud.nacos.config.group=DEFAULT_GROUP
+
+spring.cloud.nacos.config.shared-configs[0].data-id=datasource.yml
+spring.cloud.nacos.config.shared-configs[0].group=dev
+spring.cloud.nacos.config.shared-configs[0].refresh=true
+
+spring.cloud.nacos.config.shared-configs[1].data-id=mybatis.yml
+spring.cloud.nacos.config.shared-configs[1].group=dev
+spring.cloud.nacos.config.shared-configs[1].refresh=true
+
+spring.cloud.nacos.config.shared-configs[2].data-id=other.yml
+spring.cloud.nacos.config.shared-configs[2].group=dev
+spring.cloud.nacos.config.shared-configs[2].refresh=true
+
+# 已过时
+#spring.cloud.nacos.config.ext-config[0].group=tdca
+#spring.cloud.nacos.config.ext-config[0].data-id=tdca-1.properties
+#spring.cloud.nacos.config.ext-config[0].refresh=true
