--- a/codingce-gulimall/pom.xml
+++ b/codingce-gulimall/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>gulimall-common</module>
+        <module>gulimall-gateway</module>
         <module>gulimall-product</module>
         <module>gulimall-order</module>
         <module>gulimall-ware</module>
