--- a/codingce-gulimall/gulimall-gateway/pom.xml
+++ b/codingce-gulimall/gulimall-gateway/pom.xml
@@ -15,7 +15,7 @@
     <description>API网关</description>
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>2020.0.0</spring-cloud.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
     </properties>
     <dependencies>
 
