--- a/codingce-gulimall/gulimall-product/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-product/src/main/resources/application.yaml
@@ -13,6 +13,13 @@ spring:
         server-addr: 127.0.0.1:8848
   application:
     name: gulimall-product
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+  thymeleaf:
+    cache: false
+  redis:
+    host: 127.0.0.1
+    port: 6379
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
