--- a/codingce-gulimall/gulimall-product/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-product/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://localhost:3306/gulimall_pms
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
