--- a/codingce-gulimall/renren-fast/pom.xml
+++ b/codingce-gulimall/renren-fast/pom.xml
@@ -52,6 +52,14 @@
 	</properties>
 
 	<dependencies>
+
+		<!-- 公众项目 -->
+		<dependency>
+			<groupId>cn.com.codingce</groupId>
+			<artifactId>gulimall-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
