--- a/codingce-gulimall/renren-fast/src/main/resources/application.yml
+++ b/codingce-gulimall/renren-fast/src/main/resources/application.yml
@@ -39,6 +39,12 @@ spring:
     throw-exception-if-no-handler-found: true
 #  resources:
 #    add-mappings: false
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 
 
 #mybatis
