--- a/codingce-gulimall/gulimall-product/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-product/src/main/resources/application.yaml
@@ -26,3 +26,8 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 0
+      logic-not-delete-value: 1
+logging:
+  level:
+    cn.com.codingce: debug
