A 阿里云对象存储后端实现

--- a/codingce-gulimall/pom.xml
+++ b/codingce-gulimall/pom.xml
@@ -23,6 +23,7 @@
         <module>gulimall-ware</module>
         <module>gulimall-coupon</module>
         <module>gulimall-member</module>
+        <module>gulimall-third-party</module>
         <module>renren-fast</module>
         <module>renren-generator</module>
     </modules>
