--- a/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
+++ b/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
@@ -20,6 +20,13 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>/?.*), /$\{segment}
 
+        - id: third_party_route
+          uri: lb://gulimall-third-party
+          predicates:
+            - Path=/api/thirdparty/**
+          filters:
+            - RewritePath=/api/thirdparty(?<segment>/?.*), /$\{segment}
+
         - id: admin_route
           uri: lb://renren-fast
           predicates:
