--- a/codingce-gulimall/gulimall-common/pom.xml
+++ b/codingce-gulimall/gulimall-common/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
 
     </dependencies>
 
