--- a/codingce-gulimall/renren-generator/src/main/resources/generator.properties
+++ b/codingce-gulimall/renren-generator/src/main/resources/generator.properties
@@ -3,13 +3,13 @@
 mainPath=cn.com.codingce
 # 包名
 package=cn.com.codingce
-moduleName=product
+moduleName=ware
 # 作者
 author=mxz
 #Email
 email=codingce@gmail.com
 # 表前缀(类名不会包含表前缀)
-tablePrefix=pms_
+tablePrefix=wms_
 
 # 类型转换，配置信息
 tinyint=Integer
