--- a/codingce-gulimall/gulimall-coupon/src/main/resources/application.yml
+++ b/codingce-gulimall/gulimall-coupon/src/main/resources/application.yml
@@ -7,7 +7,7 @@
 #  datasource:
 #    username: root
 #    password: 123456
-#    url: jdbc:mysql://localhost:3306/gulimall_sms
+#    url: jdbc:mysql://localhost:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 #    driver-class-name: com.mysql.jdbc.Driver
 #  cloud:
 #    nacos:
