--- a/codingce-gulimall/gulimall-member/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-member/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/gulimall_ums
+    url: jdbc:mysql://localhost:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
   cloud:
     nacos:
