--- a/codingce-gulimall/gulimall-order/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-order/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/gulimall_oms
+    url: jdbc:mysql://localhost:3306/gulimall_oms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
   cloud:
     nacos:
