--- a/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
+++ b/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
@@ -2,15 +2,15 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: test_route
-          uri: https://www.baidu.com
-          predicates:
-            - Query=url, baidu
-
-        - id: qq_route
-          uri: https://www.qq.com
-          predicates:
-            - Query=url, qq
+#        - id: test_route
+#          uri: https://www.baidu.com
+#          predicates:
+#            - Query=url, baidu
+#
+#        - id: qq_route
+#          uri: https://www.qq.com
+#          predicates:
+#            - Query=url, qq
 
         ## 需要调整下路由顺序
         - id: product_route
@@ -19,6 +19,14 @@ spring:
             - Path=/api/product/**
           filters:
             - RewritePath=/api/(?<segment>/?.*), /$\{segment}
+
+        - id: member_route
+          uri: lb://gulimall-member
+          predicates:
+            - Path=/api/member/**
+          filters:
+            - RewritePath=/api/(?<segment>/?.*), /$\{segment}
+
 
         - id: third_party_route
           uri: lb://gulimall-third-party
