:fire: spu发布; 上架

--- a/codingce-gulimall/gulimall-common/pom.xml
+++ b/codingce-gulimall/gulimall-common/pom.xml
@@ -19,6 +19,13 @@
     </properties>
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/io.seata/seata-all -->
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-all</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+
         <!-- dao mybatis-plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
