--- a/codingce-gulimall/gulimall-coupon/pom.xml
+++ b/codingce-gulimall/gulimall-coupon/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>gulimall-coupon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gulimall-coupon</name>
-    <description>优惠服务</description>
+    <description>优惠服务系统</description>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
