--- a/codingce-gulimall/gulimall-coupon/src/main/resources/application.yml
+++ b/codingce-gulimall/gulimall-coupon/src/main/resources/application.yml
@@ -8,7 +8,7 @@
 #    username: root
 #    password: 123456
 #    url: jdbc:mysql://localhost:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-#    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 #  cloud:
 #    nacos:
 #      discovery:
