--- a/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
+++ b/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
@@ -27,6 +27,19 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>/?.*), /$\{segment}
 
+        - id: coupon_route
+          uri: lb://gulimall-coupon
+          predicates:
+            - Path=/api/coupon/**
+          filters:
+            - RewritePath=/api/(?<segment>/?.*), /$\{segment}
+
+        - id: ware_route
+          uri: lb://gulimall-ware
+          predicates:
+            - Path=/api/ware/**
+          filters:
+            - RewritePath=/api/(?<segment>/?.*), /$\{segment}
 
         - id: third_party_route
           uri: lb://gulimall-third-party
