--- a/codingce-gulimall/gulimall-ware/pom.xml
+++ b/codingce-gulimall/gulimall-ware/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>gulimall-ware</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gulimall-ware</name>
-    <description>Demo project for Spring Boot</description>
+    <description>库存系统</description>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
