--- a/codingce-gulimall/gulimall-ware/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-ware/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://localhost:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
