--- a/codingce-gulimall/gulimall-ware/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-ware/src/main/resources/application.yaml
@@ -15,6 +15,8 @@ spring:
         server-addr: 127.0.0.1:8848
   application:
     name: gulimall-ware
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
