--- a/codingce-gulimall/gulimall-search/pom.xml
+++ b/codingce-gulimall/gulimall-search/pom.xml
@@ -16,8 +16,16 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <!-- 指定和本地版本一致 -->
+        <elasticsearch.version>7.10.1</elasticsearch.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.11.1</version>
+        </dependency>
 
         <!-- 公众项目 -->
         <dependency>
