--- a/codingce-gulimall/gulimall-order/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-order/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     username: root
-    password: 123456
+    password: 1234567890
     url: jdbc:mysql://localhost:3306/gulimall_oms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
   cloud:
