--- a/codingce-gulimall/renren-fast-vue/package.json
+++ b/codingce-gulimall/renren-fast-vue/package.json
@@ -18,15 +18,14 @@
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
     "element-ui": "2.8.2",
-    "gulp": "3.9.1",
+    "gulp": "4.0.2",
     "gulp-concat": "2.6.1",
-    "gulp-load-plugins": "1.5.0",
-    "gulp-replace": "0.6.1",
-    "gulp-shell": "0.6.5",
+    "gulp-load-plugins": "2.0.5",
+    "gulp-replace": "1.0.0",
+    "gulp-shell": "0.8.0",
     "lodash": "4.17.5",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.13.1",
     "npm": "^6.9.0",
-    "pubsub-js": "^1.9.3",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
@@ -86,7 +85,7 @@
     "vue-template-compiler": "2.5.16",
     "webpack": "3.6.0",
     "webpack-bundle-analyzer": "2.9.0",
-    "webpack-dev-server": "2.9.1",
+    "webpack-dev-server": "^3.0.0",
     "webpack-merge": "4.1.0"
   },
   "engines": {
