--- a/codingce-gulimall/renren-fast-vue/package.json
+++ b/codingce-gulimall/renren-fast-vue/package.json
@@ -24,8 +24,9 @@
     "gulp-replace": "1.0.0",
     "gulp-shell": "0.8.0",
     "lodash": "4.17.5",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.14.1",
     "npm": "^6.9.0",
+    "pubsub-js": "^1.9.3",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
@@ -66,6 +67,8 @@
     "html-webpack-plugin": "2.30.1",
     "jest": "21.2.0",
     "jest-serializer-vue": "0.3.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "nightwatch": "0.9.12",
     "node-notifier": "5.1.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -85,7 +88,7 @@
     "vue-template-compiler": "2.5.16",
     "webpack": "3.6.0",
     "webpack-bundle-analyzer": "2.9.0",
-    "webpack-dev-server": "^3.0.0",
+    "webpack-dev-server": "2.9.1",
     "webpack-merge": "4.1.0"
   },
   "engines": {
