--- a/codingce-gulimall/renren-generator/src/main/resources/generator.properties
+++ b/codingce-gulimall/renren-generator/src/main/resources/generator.properties
@@ -1,15 +1,15 @@
 # 代码生成器，配置信息  Unicode转中文  \u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
 
-mainPath=cn.com.codingce
+mainPath=cn.edudot.tjise
 # 包名
-package=cn.com.codingce
-moduleName=coupon
+package=cn.edudot.tjise
+moduleName=api
 # 作者
 author=mxz
 #Email
 email=codingce@gmail.com
 # 表前缀(类名不会包含表前缀)
-tablePrefix=sms_
+tablePrefix=
 
 # 类型转换，配置信息
 tinyint=Integer
