--- a/codingce-gulimall/renren-fast/pom.xml
+++ b/codingce-gulimall/renren-fast/pom.xml
@@ -8,8 +8,6 @@
 	<packaging>jar</packaging>
 	<description>renren-fast</description>
 
-
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -25,13 +23,13 @@
 		<mssql.version>4.0</mssql.version>
 		<oracle.version>11.2.0.3</oracle.version>
 		<druid.version>1.1.13</druid.version>
-		<quartz.version>2.3.2</quartz.version>
+		<quartz.version>2.3.0</quartz.version>
 		<commons.lang.version>2.6</commons.lang.version>
-		<commons.fileupload.version>1.3.3</commons.fileupload.version>
+		<commons.fileupload.version>1.2.2</commons.fileupload.version>
 		<commons.io.version>2.5</commons.io.version>
 		<commons.codec.version>1.10</commons.codec.version>
 		<commons.configuration.version>1.10</commons.configuration.version>
-		<shiro.version>1.7.0</shiro.version>
+		<shiro.version>1.4.0</shiro.version>
 		<jwt.version>0.7.0</jwt.version>
 		<kaptcha.version>0.0.9</kaptcha.version>
 		<qiniu.version>7.2.23</qiniu.version>
@@ -40,8 +38,8 @@
 		<swagger.version>2.7.0</swagger.version>
 		<joda.time.version>2.9.9</joda.time.version>
 		<gson.version>2.8.5</gson.version>
-		<fastjson.version>1.2.72</fastjson.version>
-		<hutool.version>4.1.12</hutool.version>
+		<fastjson.version>1.2.60</fastjson.version>
+		<hutool.version>4.1.1</hutool.version>
 		<lombok.version>1.18.4</lombok.version>
 
 
@@ -55,13 +53,23 @@
 
 	<dependencies>
 
-		<!-- 公众项目 -->
 		<dependency>
-			<groupId>cn.com.codingce</groupId>
-			<artifactId>gulimall-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+			<version>2.2.4.RELEASE</version>
 		</dependency>
 
+		<!--        配置中心来做配置管理-->
+		<!--		<dependency>-->
+		<!--			<groupId>com.alibaba.cloud</groupId>-->
+		<!--			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+		<!--		</dependency>-->
+
+		<!--        <dependency>-->
+		<!--            <groupId>javax.validation</groupId>-->
+		<!--            <artifactId>validation-api</artifactId>-->
+		<!--            <version>2.0.1.Final</version>-->
+		<!--        </dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
