--- a/codingce-gulimall/gulimall-member/src/main/resources/application.yaml
+++ b/codingce-gulimall/gulimall-member/src/main/resources/application.yaml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     username: root
-    password: 123456
+    password: 1234567890
     url: jdbc:mysql://localhost:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
