--- a/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
+++ b/codingce-gulimall/gulimall-gateway/src/main/resources/application.yml
@@ -59,3 +59,9 @@ spring:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>/?.*), /renren-fast/$\{segment}
+
+        ## nginx代理给网关,  网关判断转交给其他服务
+        - id: gulimall_host_route
+          uri: lb://gulimall-product
+          predicates:
+            - Host=gulimall.com
