--- a/hadoop-redis/src/main/resources/application.properties
+++ b/hadoop-redis/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #指定redis的数据库
 spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.host=139.9.34.48
 #端口号
 spring.redis.port=6379
 #密码
-spring.redis.password=123456
+spring.redis.password=mxz123456
 
 #连接池
 #最大连接数
