--- a/HdfsClientDemo/pom.xml
+++ b/HdfsClientDemo/pom.xml
@@ -9,16 +9,65 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+
+        <!-- hbase -->
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-client</artifactId>-->
+<!--            <version>2.2.7</version>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-server -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
+
+        <!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-it</artifactId>-->
+<!--            <version>2.2.7</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
+        <!-- hbase-server -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-server</artifactId>-->
+<!--            <version>2.2.7</version>-->
+<!--        </dependency>-->
+
+        <!-- hbase-protocol -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-protocol</artifactId>-->
+<!--            <version>2.2.7</version>-->
+<!--        </dependency>-->
+
+
+        <!-- hadoop -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>3.1.1</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
