--- a/codingce-hbase/pom.xml
+++ b/codingce-hbase/pom.xml
@@ -21,14 +21,14 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>1.4.2</version>
+            <version>2.1.5</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-server -->
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
-            <version>1.4.2</version>
+            <version>2.1.5</version>
         </dependency>
 
 
@@ -53,4 +53,18 @@
         <!--            <version>2.2.7</version>-->
         <!--        </dependency>-->
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
