--- a/codingce-hdfsclient/pom.xml
+++ b/codingce-hdfsclient/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.com.codingce</groupId>
-    <artifactId>HdfsClientDemo</artifactId>
+    <artifactId>codingce-hdfsclient</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>codingce-hdfsclientdemo</name>
 
     <dependencies>
 
@@ -90,8 +91,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
