--- a/codingce-hive/pom.xml
+++ b/codingce-hive/pom.xml
@@ -8,8 +8,18 @@
     <artifactId>codingce-hive</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-jdbc -->
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>3.1.2</version>
+        </dependency>
 
         <!-- fastjson -->
         <dependency>
