--- a/codingce-rabbitmq/rabbitmq-02-springboot/src/main/resources/application.yml
+++ b/codingce-rabbitmq/rabbitmq-02-springboot/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: codingce
-    password: 123456
-    virtual-host: /codingce
+    username: test
+    password: test
+    virtual-host: /
 
 
   thymeleaf.cache: false
