--- a/codingce-rabbitmq/rabbitmq-02-springboot/src/main/resources/application.yml
+++ b/codingce-rabbitmq/rabbitmq-02-springboot/src/main/resources/application.yml
@@ -15,5 +15,9 @@ spring:
     publisher-confirm-type: correlated
     # 为true,则交换机处理消息到路由失败，则会返回给生产者
     publisher-returns: true
+    # 开启手动确认消息，如果消息重新入队，进行重试
+    listener:
+      simple:
+        acknowledge-mode: manual
 
   thymeleaf.cache: false
